--- a/components/HomeProcess.module.css
+++ b/components/HomeProcess.module.css
@@ -5,6 +5,7 @@
   margin-left: auto;
   margin-right: auto;
   isolation: isolate;
+  overflow: hidden;
 }
 
 .section::before {
